--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,11 @@
       <a href="{{ site.github.url }}/index.html" class="btn">Home</a>
       <a href="average.html" class="btn">Average</a>
       <a href="all.html" class="btn">All Polls</a>
+      <a href="{{ site.github.url }}/20200229/index.html" class="btn">2020 Polls</a>
       <a href="{{ site.github.url }}/methodology.html" class="btn">Methodology</a>
-      <a href="{{ site.github.url }}/20200229/index.html" class="btn">2020 Results</a>
       <a href="{{ site.github.url }}/resources.html" class="btn">Resources</a>
       <!-- a href="https://twitter.com/grpolls" class="btn">Twitter Feed</a -->
-      <a href="rss.xml" class="btn">RSS Feed</a>
+      <a href="{{ site.github.url }}/rss.xml" class="btn">RSS Feed</a>
       <a href="{{ site.github.url }}/contact.html" class="btn">Contact</a>
     </section>
 
